--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "build": "tsc && tsc-alias",
     "prepublishOnly": "npm run build",
-    "test": "npx jest"
+    "test": "npx jest",
+    "docs": "typedoc --out docs src"
   },
   "repository": {
     "type": "git",
@@ -34,9 +35,10 @@
   "devDependencies": {
     "@types/jest": "^29.0.0",
     "jest": "^29.0.0",
-    "typescript": "^5.0.0",
+    "tsc-alias": "^1.8.10",
     "tsconfig-paths": "^4.2.0",
-    "tsc-alias": "^1.8.10"
+    "typedoc": "^0.28.3",
+    "typescript": "^5.0.0"
   },
   "files": [
     "dist"
