--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "guardz",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "A simple and lightweight TypeScript type guard library providing runtime validation utilities.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -35,6 +35,7 @@
   "devDependencies": {
     "@types/jest": "^29.0.0",
     "jest": "^29.0.0",
+    "ts-jest": "^29.4.0",
     "tsc-alias": "^1.8.10",
     "tsconfig-paths": "^4.2.0",
     "typedoc": "^0.28.3",
