--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/thiennp/guardz.git"
+    "url": "https://github.com/thiennp/guardz.git"
   },
   "keywords": [
     "typescript",
@@ -26,7 +26,7 @@
     "assert",
     "is"
   ],
-  "author": "Your Name <your.email@example.com>",
+  "author": "Thien Nguyen",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/thiennp/guardz/issues"
