feat: comprehensive project improvements and modernization
🎯 Major Improvements:
- Enhanced CI/CD pipeline with build steps, coverage reporting, and security audits
- Added code quality tools: ESLint, Prettier, Husky pre-commit hooks
- Improved TypeScript configuration with stricter settings and better module resolution
- Added performance benchmarking with performance thresholds
- Enhanced developer experience with better npm scripts and workflows

🔧 Technical Enhancements:
- Updated Jest configuration with coverage thresholds and better test organization
- Added ESLint configuration with TypeScript-specific rules
- Enhanced TypeScript config with ES2020 target, source maps, and incremental builds
- Added Prettier for consistent code formatting
- Created comprehensive improvement plan documentation

📊 Quality & Security:
- Added security audit job to CI pipeline
- Set up code coverage reporting with 90% thresholds
- Added performance benchmarks for type guard operations
- Enhanced Node.js version testing (18.x, 20.x, 22.x)

🚀 Developer Experience:
- Added watch mode for tests and development
- Enhanced npm scripts for better workflow
- Added type checking and linting scripts
- Set up pre-commit hooks for code quality

This commit modernizes the Guardz project with enterprise-grade development practices while maintaining its excellent test coverage and type safety.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,16 @@
     "build": "tsc && tsc-alias",
     "prepublishOnly": "npm run build",
     "test": "npx jest",
-    "docs": "typedoc --out docs src"
+    "test:watch": "npx jest --watch",
+    "test:coverage": "npx jest --coverage",
+    "test:ci": "npx jest --ci --coverage --watchAll=false",
+    "docs": "typedoc --out docs src",
+    "lint": "eslint src/**/*.ts",
+    "lint:fix": "eslint src/**/*.ts --fix",
+    "type-check": "tsc --noEmit",
+    "clean": "rm -rf dist coverage",
+    "prebuild": "npm run clean",
+    "prepublishOnly": "npm run build && npm run test:ci"
   },
   "repository": {
     "type": "git",
@@ -38,12 +47,23 @@
   "homepage": "https://github.com/thiennp/guardz#readme",
   "devDependencies": {
     "@types/jest": "^29.0.0",
+    "@typescript-eslint/eslint-plugin": "^7.0.0",
+    "@typescript-eslint/parser": "^7.0.0",
+    "eslint": "^9.0.0",
+    "husky": "^9.0.0",
     "jest": "^29.0.0",
+    "lint-staged": "^15.0.0",
     "ts-jest": "^29.4.0",
     "tsc-alias": "^1.8.10",
     "tsconfig-paths": "^4.2.0",
     "typedoc": "^0.28.3",
     "typescript": "^5.0.0"
+  },
+  "lint-staged": {
+    "*.ts": [
+      "eslint --fix",
+      "prettier --write"
+    ]
   },
   "files": [
     "dist"
