--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,23 +7,48 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        node-version: [18.x, 20.x] # Test on current LTS versions
+        node-version: [18.x, 20.x, 22.x] # Test on current LTS versions
 
     steps:
-    - uses: actions/checkout@v4 # Checks out your repository
+    - uses: actions/checkout@v4
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'npm' # Enable caching for npm dependencies
+        cache: 'npm'
 
     - name: Install Dependencies
-      run: npm ci # Use ci for faster, more reliable installs in CI
+      run: npm ci
 
-    - name: Run Tests
-      run: npm test 
+    - name: Build
+      run: npm run build
+
+    - name: Run Tests with Coverage
+      run: npm test -- --coverage
+
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v4
+      with:
+        file: ./coverage/lcov.info
+        flags: unittests
+        name: codecov-umbrella
+        fail_ci_if_error: false
+
+  security:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - name: Use Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '20.x'
+        cache: 'npm'
+    - name: Install Dependencies
+      run: npm ci
+    - name: Run Security Audit
+      run: npm audit --audit-level=moderate 
