docs: improve readme

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "guardz",
-  "version": "1.10.5",
+  "version": "1.10.6",
   "description": "A simple and lightweight TypeScript type guard library for runtime type validation.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -24,19 +24,100 @@
   },
   "keywords": [
     "typescript",
-    "type",
-    "guard",
-    "typeguard",
     "type-guard",
-    "runtime",
-    "validation",
-    "check",
-    "assert",
-    "is",
-    "intersection",
-    "extension",
-    "composite",
-    "inheritance"
+    "typeguard",
+    "runtime-validation",
+    "runtime-type-checking",
+    "type-safety",
+    "schema-validation",
+    "data-validation",
+    "input-validation",
+    "api-validation",
+    "form-validation",
+    "error-handling",
+    "structured-errors",
+    "json-validation",
+    "object-validation",
+    "array-validation",
+    "union-types",
+    "intersection-types",
+    "composite-types",
+    "zero-dependencies",
+    "lightweight",
+    "bundle-size",
+    "performance",
+    "monitoring",
+    "debugging",
+    "testing",
+    "assertion",
+    "type-checking",
+    "type-inference",
+    "typesafe",
+    "react",
+    "angular",
+    "vue",
+    "nodejs",
+    "express",
+    "nextjs",
+    "nestjs",
+    "fastify",
+    "koa",
+    "webpack",
+    "vite",
+    "rollup",
+    "esbuild",
+    "swc",
+    "jest",
+    "vitest",
+    "cypress",
+    "playwright",
+    "axios",
+    "fetch",
+    "graphql",
+    "rest-api",
+    "microservices",
+    "serverless",
+    "aws",
+    "azure",
+    "gcp",
+    "docker",
+    "kubernetes",
+    "ci-cd",
+    "github-actions",
+    "gitlab-ci",
+    "vercel",
+    "netlify",
+    "deno",
+    "bun",
+    "esm",
+    "commonjs",
+    "umd",
+    "tree-shaking",
+    "code-splitting",
+    "bundle-optimization",
+    "developer-experience",
+    "dx",
+    "developer-tools",
+    "typescript-ecosystem",
+    "javascript-ecosystem",
+    "frontend",
+    "backend",
+    "fullstack",
+    "web-development",
+    "mobile-development",
+    "desktop-development",
+    "cli-tools",
+    "build-tools",
+    "compiler",
+    "transpiler",
+    "static-analysis",
+    "linting",
+    "code-quality",
+    "best-practices",
+    "enterprise",
+    "startup",
+    "open-source",
+    "mit-license"
   ],
   "author": "Thien Nguyen",
   "license": "MIT",
