feat: Add comprehensive performance testing strategy with CI-friendly thresholds
- Add separate performance tests for each error mode
- Create CI-specific performance tests with lenient thresholds
- Update main performance tests with more CI-friendly thresholds
- Add performance test scripts to package.json
- Create comprehensive PERFORMANCE.md documentation
- Ensure tests won't fail randomly in GitHub CI environments

Performance test suites:
- benchmarks/performance.test.ts: Main performance benchmarks
- benchmarks/error-modes-performance.test.ts: Error mode analysis
- benchmarks/ci-performance.test.ts: CI-specific tests

NPM scripts:
- npm run test:performance: Main performance tests
- npm run test:performance:modes: Error mode analysis
- npm run test:performance:ci: CI-specific tests

--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "test:watch": "npx jest --watch",
     "test:coverage": "npx jest --coverage",
     "test:ci": "npx jest --ci --coverage --watchAll=false",
+    "test:performance": "npx jest --testPathPattern=performance.test.ts",
+    "test:performance:modes": "npx jest --testPathPattern=error-modes-performance.test.ts",
+    "test:performance:ci": "npx jest --testPathPattern=ci-performance.test.ts",
     "docs": "typedoc --out docs src",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix",
