--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
       run: npm run build
 
     - name: Run Tests with Coverage
-      run: npm test -- --coverage
+      run: npm run test:ci
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v4
