--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "npx jest",
     "test:watch": "npx jest --watch",
     "test:coverage": "npx jest --coverage",
-    "test:ci": "npx jest --ci --coverage --watchAll=false",
+    "test:ci": "npx jest --ci --coverage --watchAll=false --testPathIgnorePatterns=benchmarks",
     "test:performance": "npx jest --testPathPattern=performance.test.ts",
     "test:performance:modes": "npx jest --testPathPattern=error-modes-performance.test.ts",
     "test:performance:ci": "npx jest --testPathPattern=ci-performance.test.ts",
