--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/thiennp/guardz.git"
+    "url": "git+https://github.com/thiennp/guardz.git"
   },
   "keywords": [
     "typescript",
